--- a/server/package.json
+++ b/server/package.json
@@ -32,25 +32,35 @@
     "db:backup": "../scripts/backup-db.sh"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.1.0",
     "@fastify/cors": "^9.0.0",
+    "@fastify/multipart": "^8.0.0",
     "@fastify/rate-limit": "^9.0.0",
     "@fastify/websocket": "^8.3.1",
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^12.2.0",
     "chalk": "^5.3.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.44.5",
     "fastify": "^4.24.3",
+    "ioredis": "^5.7.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pino": "^8.16.2",
     "pino-pretty": "^10.2.3",
+    "redis": "^4.7.1",
+    "rollup-plugin-visualizer": "^6.0.3",
+    "vite-plugin-compression": "^0.5.1",
     "ws": "^8.16.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/eslint": "^9.6.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.8.10",
     "@types/pg": "^8.15.5",
     "@types/ws": "^8.5.0",
