fix: Ensure newline at end of file in package.json and tsconfig.json

--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -10,12 +10,6 @@
     "forceConsistentCasingInFileNames": true,
     "exactOptionalPropertyTypes": true
   },
-  "include": [
-    "types/**/*",
-    "utils/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["types/**/*", "utils/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
