fix: Update import paths to use relative paths with .js extension and enhance Dockerfile for optimized builds

--- a/.env.docker
+++ b/.env.docker
@@ -3,7 +3,7 @@
 # This file contains default environment variables for Docker deployment
 
 # Discord Configuration
-DISCORD_TOKEN=your_discord_bot_token_here
+DISCORD_TOKEN=your_discord_token_here
 
 # Database Configuration
 DATABASE_TYPE=postgres
@@ -31,6 +31,7 @@ REDIS_KEY_PREFIX=discord_bot:
 ENABLE_DASHBOARD=true
 DASHBOARD_PORT=3000
 DASHBOARD_HOST=0.0.0.0
+SERVER_ENABLED=false
 
 # Reminder Configuration
 REMINDER_INTERVAL_HOURS=24
