--- a/client/package.json
+++ b/client/package.json
@@ -60,5 +60,7 @@
     "vitest": "^0.34.6",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.0.0"
-  }
+  },
+  "license": "MIT",
+  "private": true
 }
