--- a/server/package.json
+++ b/server/package.json
@@ -1,9 +1,8 @@
-
 {
   "name": "discord-reminder-bot-server",
   "version": "2.0.0",
   "description": "Discord bot server with API and database management",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "type": "module",
   "imports": {
     "#/*": "./src/*"
@@ -14,10 +13,10 @@
   },
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "dev:build": "concurrently -n \"build,bot\" -c \"cyan,green\" \"vite build --config vite.config.ts --watch\" \"nodemon --watch dist --delay 2 dist/index.js\"",
+    "dev:build": "concurrently -n \"build,bot\" -c \"cyan,green\" \"vite build --config vite.config.ts --watch\" \"nodemon --watch dist --delay 2 dist/src/index.js\"",
     "dev:direct": "tsx src/index.ts",
-    "start": "node dist/index.js",
-    "build": "vite build",
+    "start": "node dist/src/index.js",
+    "build": "tsc",
     "clean": "rm -rf dist",
     "test": "vitest",
     "test:watch": "vitest --watch",
@@ -33,11 +32,11 @@
     "db:backup": "../scripts/backup-db.sh"
   },
   "dependencies": {
-    "@fastify/cookie": "^9.1.0",
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
-    "@fastify/multipart": "^8.0.0",
+    "@fastify/multipart": "^9.2.1",
     "@fastify/rate-limit": "^10.3.0",
-    "@fastify/websocket": "^8.3.1",
+    "@fastify/websocket": "^11.2.0",
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^12.2.0",
     "chalk": "^5.3.0",
@@ -48,8 +47,6 @@
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
-    "pino": "^8.16.2",
-    "pino-pretty": "^10.2.3",
     "redis": "^4.7.1",
     "rollup-plugin-visualizer": "^6.0.3",
     "ws": "^8.16.0",
@@ -74,6 +71,7 @@
     "jiti": "^2.5.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
+    "tsc-alias": "^1.8.8",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.41.0",
@@ -83,5 +81,7 @@
     "vite-plugin-node-polyfills": "^0.21.0",
     "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6"
-  }
+  },
+  "license": "MIT",
+  "private": true
 }
