--- a/shared/package.json
+++ b/shared/package.json
@@ -28,5 +28,7 @@
     "prettier": "^3.0.3",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.41.0"
-  }
+  },
+  "license": "MIT",
+  "private": true
 }
